# moondown-app

./: .gitignore  README.md  index.html  logo_generator.py  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yml
assets/platform/macos/: icon.icns
docs/superpowers/plans/: 2026-05-16-moondown-app.md
docs/superpowers/specs/: 2026-05-16-moondown-app-design.md
scripts/: check-app-ui.mjs  check-app.mjs  verify-brand-assets.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: MoondownEditor.tsx
src/lib/: aiProviders.ts  exporters.ts  fileActions.ts  markdown.ts  moondownInteractionFixes.ts  settings.ts
